tests/snapshots/cross_file__dup002_example.snap
---
source: tests/cross_file.rs
expression: diagnostics
---
[
  {
    "code": "DUP002",
    "message": "This section repeats identifiers from a linked section instead of leaving a focused reference.",
    "filename": "guide.md",
    "location": {
      "row": 5,
      "column": 1
    },
    "end_location": {
      "row": 10,
      "column": 1
    },
    "byte_range": {
      "start": 21,
      "end": 165
    },
    "fix": null,
    "url": null,
    "related": [
      {
        "filename": "reference.md",
        "location": {
          "row": 6,
          "column": 1
        },
        "end_location": {
          "row": 15,
          "column": 1
        },
        "byte_range": {
          "start": 34,
          "end": 366
        },
        "message": "Matching content with higher ownership priority."
      }
    ],
    "suggestion": "Keep the shared definition or explanation in its authoritative document and replace the repeated content with a focused link."
  }
]
